# biji2md_tauri

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  README.md  SYNC_PAGE_REDESIGN.md  TODO.md  api.example.md  enhance.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
.trae/documents/: auto-updater-implementation-plan.md
.trae/rules/: git-commit-message.md
src/: App.tsx  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: biji2md.key.pub
src-tauri/src/: api.rs  cache.rs  commands.rs  config.rs  export.rs  history.rs  index.rs  lib.rs  log.rs  main.rs  state.rs  sync.rs  types.rs
src/components/: OnboardingGuide.tsx  RewardDialog.tsx  Toolbar.tsx
src/hooks/: useCache.ts  useSettings.ts  useSync.ts  useUpdater.ts
src/pages/: AutomationPage.tsx  SettingsPage.tsx  SyncPage.tsx
src/types/: index.ts
