[package]
name = "biji2md"
version = "1.0.0"
edition = "2021"
description = "Batch export notes to Markdown with Tauri"

[lib]
name = "biji2md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["sync"] }

[lints.rust]
unused_imports = "deny"
dead_code = "warn"
